octant/yaml/octant-svc-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: octant
  name: octant
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: octant
status:
  loadBalancer: {}
