octant/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/issuer: "selfsigned-issuer"
    name: octant-ing
    namespace: default
spec:
    rules:
      - host: octant.apps.kube.mylab.local
        http:
          paths:
            - backend:
                serviceName: octant
                servicePort: 80
              path: /
    tls:
        - hosts:
            - octant.apps.kube.mylab.local
          secretName: octant-cert-tls
